# py-obs-pyroscope-ebpf

./: .env.example  Dockerfile  README.md  alloy-config-filtered.alloy  alloy-config.alloy  continuous_demo.py  demo.py  docker-compose.filtered-example.yml  docker-compose.yml  pyproject.toml
scenarios/: __init__.py  io_patterns.py  processing_logic.py  serdes_comparison.py
src/py_flamegraph/: __init__.py  kafka_client.py  serdes.py
tests/: __init__.py  test_kafka_integration.py  test_serdes.py
util_scripts/: check_infrastructure.py  check_profiles.py
